--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=clinic
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/clinic?currentSchema=clinic
+spring.datasource.url=jdbc:postgresql://localhost:5432/clinic
 spring.datasource.username=clinic
 spring.datasource.password=clinic
+spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
